[tool.poetry]
name = "casher"
version = "0.1.0"
description = ""
authors = ["Yamemik <kuancarlos@mail.ru>"]
license = "mit"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
unicorn = "^2.0.1.post1"
pymongo = "^4.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
