[tool.poetry]
name = "casher"
version = "0.1.0"
description = ""
authors = ["Yamemik <kuancarlos@mail.ru>"]
license = "mit"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
pymongo = "^4.6.2"
uvicorn = "^0.27.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
