[tool.poetry]
name = "casher"
version = "0.1.0"
description = ""
authors = ["Yamemik <kuancarlos@mail.ru>"]
license = "mit"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
pymongo = "^4.6.2"
uvicorn = "^0.27.1"
pydantic-settings = "^2.2.1"
motor = "^3.3.2"
pydantic = {extras = ["email"], version = "^2.6.3"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.9"
aiohttp = "^3.9.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
